@@ -19,7 +19,8 @@ which extracts the identity of the heaviest POP3 users from logfiles. Added a
 permit-empty-passwords option, default no, largely to protect LDAP users who
 left LDAP anonymous authentication switched on.... The I/O layer was rewritten
 to use non-blocking I/O throughout. Connections are now frozen briefly after
-a failed authentication using code adapted from a contribution by Yann Grossel.
+a failed authentication using code adapted from a contribution by Yann Grossel,
+who also contributed support for MySQL server failover for auth-mysql.
 
 1.4.2
 
